--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,9 +3,10 @@ on: [push]
 jobs:
     docker-build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:       
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
