--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,3 +18,14 @@ jobs:
             push: true
             tags: joe991/todo-list:latest
         - run: echo done
+
+
+    docker-deploy:
+      needs: docker-build
+      runs-on: [dev]
+      steps:
+        - name: running a docker container
+          run: sudo docker run -dp 127.0.0.1:3000:3000 joe991/todo-list:latest
+
+        - name: check the running container
+          run: sudo docker ps
